--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
-    "react-router-dom": "^6.7.0",
     "react-scripts": "5.0.1",
+    "react-scroll": "^1.8.9",
     "react-tsparticles": "^2.3.2",
     "tsparticles": "^2.3.2",
     "web-vitals": "^2.1.4"
